--- a/mystyle.css
+++ b/mystyle.css
@@ -80,7 +80,7 @@ header a:hover{
     flex-direction: column;
     height: 90vh;
     color: white;
-    background-image: url("imagenes/logo.jpg");
+    background-image: url("Imagenes/logo.jpg");
     background-repeat: no-repeat;
 
 
@@ -104,7 +104,7 @@ header a:hover{
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     )
-    ,url("imagenes/torta.jpg");
+    ,url("Imagenes/torta.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -163,7 +163,7 @@ text-align: center;
         rgba(0,0,0,0.2),
         rgba(0,0,0,0.2)
     )
-    ,url("imagenes/torta3.jpg");
+    ,url("Imagenes/torta3.jpg");
     }
 
 .carta:nth-child(2){
@@ -172,7 +172,7 @@ text-align: center;
         rgba(0,0,0,0.2),
         rgba(0,0,0,0.2)
     )
-    ,url("imagenes/torta4.jpg");
+    ,url("Imagenes/torta4.jpg");
     }
 .carta:nth-child(3){
     background-image: linear-gradient(
@@ -180,7 +180,7 @@ text-align: center;
         rgba(0,0,0,0.2),
         rgba(0,0,0,0.2)
     )
-    ,url("imagenes/torta7.jpg");
+    ,url("Imagenes/torta7.jpg");
     }
 
 #caracteristicas .container{
@@ -207,7 +207,7 @@ text-align: center;
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     )
-    ,url("imagenes/torta2.jpg");
+    ,url("Imagenes/torta2.jpg");
     
     color: white;
     height: 80vh;
