--- a/mystyle.css
+++ b/mystyle.css
@@ -247,6 +247,7 @@ footer .container{
     header nav {
         flex-direction: row;
         padding-bottom: 0;
+        padding-bottom: 0;
     }
 
 }
