--- a/mystyle.css
+++ b/mystyle.css
@@ -11,11 +11,11 @@ li{font-size: 1.75em};
 
 body{
     font-family: "roboto",sans-serif;
-    margin: o;
+    margin: 0px;
 }
 
 button {
-font: size 1.5em;
+font-size: 1.5em;
 font-weight: bold;
 padding: 10px 20px;
 border-radius: 10px;
@@ -35,7 +35,7 @@ button:hover{
 }
 
 header{
-    background-color: rgba(180, 140, 30, 0.8);
+    background-color: rgba(180, 140, 30, 1);
 }
 
 header .logo{
@@ -85,7 +85,7 @@ header a:hover{
 
 
     background-position: center center;
-    margin: 25px;
+    margin: 50px;
     padding: 50px;
     border-radius: 15px;
 }
@@ -239,6 +239,19 @@ footer .container{
 }
 
 @media (min-width: 768px){
+    
+    body{
+        margin: 0;
+    }
+
+    
+
+    header{
+        position: fixed;
+        width: 100%;
+        top: 0;
+    }
+
     header .container{
         flex-direction: row;
         justify-content: space-between;
@@ -247,7 +260,99 @@ footer .container{
     header nav {
         flex-direction: row;
         padding-bottom: 0;
-        padding-bottom: 0;
+        padding-right: 30px;
     }
+
+    #primera .container{
+        display: flex;
+        justify-content: center;
+    }
+
+    #primera .texto{
+        width: 50%;
+        text-align: initial;
+        padding: 0px 30px;
+        max-width: 600px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+
+    #primera .img-container{
+        background-image: url("Imagenes/torta8.jpg");
+        background-size: cover;
+        background-position: center center;
+        height: 500px;
+        width: 500px;
+    }
+
+        #segunda .cartas{
+            display: flex;
+            justify-content: center;
+        }
+
+        #segunda p{
+            display: block;
+        }
+
+        #segunda h2{
+            margin-bottom: 50px;
+        }
+
+        #segunda .carta{
+            padding: 30px 5px;
+            margin: 10PX;
+        }
+
+        .carta:first-child{
+            background-image: linear-gradient(
+                0deg,
+                rgba(0,0,0,0.6),
+                rgba(0,0,0,0.6)
+            )
+            ,url("Imagenes/torta3.jpg");
+            }
+        
+        .carta:nth-child(2){
+            background-image: linear-gradient(
+                0deg,
+                rgba(0,0,0,0.6),
+                rgba(0,0,0,0.6)
+            )
+            ,url("Imagenes/torta4.jpg");
+            }
+        .carta:nth-child(3){
+            background-image: linear-gradient(
+                0deg,
+                rgba(0,0,0,0.6),
+                rgba(0,0,0,0.6)
+            )
+            ,url("Imagenes/torta7.jpg");
+            }
+
+            #caracteristicas{
+                background-color: rgba(250, 250, 250, 0.8);
+            }
+
+            #caracteristicas h2{
+                margin-top: 50px;
+                margin-bottom: 50px;
+            }
+            
+            #caracteristicas li{
+                margin: 15px 0px;
+                font-weight: bold;
+                font-size: 2.5em;
+            }
+
+            #final h2{
+                font-size: 6vw;
+            }
+            
+            #final button{
+                font-size: 3vw;
+            }
 
 }
